JduFormattedStream -> JduPrinter