@@ -3,17 +3,18 @@ package ru.nsu.fit.akitov.jdu.model;
 import org.junit.Before;
 import org.junit.Test;
 import ru.nsu.fit.akitov.jdu.Arguments;
-import ru.nsu.fit.akitov.jdu.JduFormattedStream;
+import ru.nsu.fit.akitov.jdu.JduPrinter;
 
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static junit.framework.TestCase.assertEquals;
 
-public class JduFormattedStreamTests {
+public class JduPrinterTests {
   private final ByteArrayOutputStream baos = new ByteArrayOutputStream();
   private final PrintStream ps = new PrintStream(baos);
 
@@ -25,7 +26,7 @@ public class JduFormattedStreamTests {
   @Test
   public void printFile() {
     JduFile file = new JduRegularFile(Path.of("tmp"), 8192);
-    JduFormattedStream stream = new JduFormattedStream(ps, Arguments.DEFAULT_DEPTH, Arguments.DEFAULT_LIMIT);
+    JduPrinter stream = new JduPrinter(ps, Arguments.DEFAULT_DEPTH, Arguments.DEFAULT_LIMIT);
     stream.print(file);
     assertEquals("tmp [8.000 KiB]\n", baos.toString());
   }
@@ -37,11 +38,11 @@ public class JduFormattedStreamTests {
     JduDirectory d2 = new JduDirectory(Path.of("d/d2"), 1024, null);
     d.setChildren(Arrays.asList(d1, d2));
     JduDirectory d3 = new JduDirectory(Path.of("d/d1/d3"), 0, new ArrayList<>());
-    d1.setChildren(Arrays.asList(d3));
+    d1.setChildren(List.of(d3));
     JduRegularFile f = new JduRegularFile(Path.of("d/d2/f"), 1024);
-    d2.setChildren(Arrays.asList(f));
+    d2.setChildren(List.of(f));
 
-    JduFormattedStream stream = new JduFormattedStream(ps, Arguments.DEFAULT_DEPTH, Arguments.DEFAULT_LIMIT);
+    JduPrinter stream = new JduPrinter(ps, Arguments.DEFAULT_DEPTH, Arguments.DEFAULT_LIMIT);
     stream.print(d);
 
     assertEquals("""
@@ -62,9 +63,9 @@ public class JduFormattedStreamTests {
     JduDirectory d3 = new JduDirectory(Path.of("d/d3"), 0, null);
     d.setChildren(Arrays.asList(d1, d2, d3));
     JduRegularFile f = new JduRegularFile(Path.of("d/d2/f"), 1024);
-    d2.setChildren(Arrays.asList(f));
+    d2.setChildren(List.of(f));
 
-    JduFormattedStream stream = new JduFormattedStream(ps, Arguments.DEFAULT_DEPTH, 1);
+    JduPrinter stream = new JduPrinter(ps, Arguments.DEFAULT_DEPTH, 1);
     stream.print(d);
 
     assertEquals("/d [1.000 KiB]\n  /d2 [1.000 KiB]\n    f [1.000 KiB]\n", baos.toString());
@@ -78,9 +79,9 @@ public class JduFormattedStreamTests {
     JduDirectory d3 = new JduDirectory(Path.of("d/d3"), 0, new ArrayList<>());
     d.setChildren(Arrays.asList(d1, d2, d3));
     JduRegularFile f = new JduRegularFile(Path.of("d/d2/f"), 1024);
-    d2.setChildren(Arrays.asList(f));
+    d2.setChildren(List.of(f));
 
-    JduFormattedStream stream = new JduFormattedStream(ps, 1, Arguments.DEFAULT_LIMIT);
+    JduPrinter stream = new JduPrinter(ps, 1, Arguments.DEFAULT_LIMIT);
     stream.print(d);
 
     assertEquals("/d [1.000 KiB]\n  /d2 [1.000 KiB]\n  /d1 [0.000 B]\n  /d3 [0.000 B]\n", baos.toString());
@@ -96,9 +97,9 @@ public class JduFormattedStreamTests {
     JduSymlink link2 = new JduSymlink(Path.of("link2"), d2);
 
     root.setChildren(Arrays.asList(d1, d2, link1, link2));
-    d1.setChildren(Arrays.asList(f1));
+    d1.setChildren(List.of(f1));
 
-    JduFormattedStream stream = new JduFormattedStream(ps, Arguments.DEFAULT_DEPTH, Arguments.DEFAULT_LIMIT);
+    JduPrinter stream = new JduPrinter(ps, Arguments.DEFAULT_DEPTH, Arguments.DEFAULT_LIMIT);
     stream.print(root);
     assertEquals("""
                       /. [0.000 B]
@@ -117,9 +118,9 @@ public class JduFormattedStreamTests {
   public void simpleLoop() {
     JduDirectory d = new JduDirectory(Path.of("d"), 0, null);
     JduSymlink link = new JduSymlink(Path.of("d/link"), d);
-    d.setChildren(Arrays.asList(link));
+    d.setChildren(List.of(link));
 
-    JduFormattedStream stream = new JduFormattedStream(ps, 8, Arguments.DEFAULT_LIMIT);
+    JduPrinter stream = new JduPrinter(ps, 8, Arguments.DEFAULT_LIMIT);
     stream.print(d);
 
     assertEquals("""
@@ -134,7 +135,7 @@ public class JduFormattedStreamTests {
                             /d [0.000 B]
             """, baos.toString());
 
-    stream = new JduFormattedStream(ps, 2, 1024);
+    stream = new JduPrinter(ps, 2, 1024);
     baos.reset();
     stream.print(d);
 
@@ -151,9 +152,9 @@ public class JduFormattedStreamTests {
     JduDirectory d2 = new JduDirectory(Path.of("d2"), 0, null);
     JduSymlink link1 = new JduSymlink(Path.of("d1/link1"), d2);
     JduSymlink link2 = new JduSymlink(Path.of("d2/link2"), d1);
-    d1.setChildren(Arrays.asList(link1));
-    d2.setChildren(Arrays.asList(link2));
-    JduFormattedStream stream = new JduFormattedStream(ps, 8, 1024);
+    d1.setChildren(List.of(link1));
+    d2.setChildren(List.of(link2));
+    JduPrinter stream = new JduPrinter(ps, 8, 1024);
     stream.print(d1);
 
     assertEquals("""
